--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>Notice Message Plugin</title>
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-		<script type="text/javascript" src="src/noticeMsg.js"></script>
-		<link type="text/css" rel="stylesheet" href="src/noticeMsg.css" />
+		<script type="text/javascript" src="src/jquery.noticeMsg.js"></script>
+		<link type="text/css" rel="stylesheet" href="src/jquery.noticeMsg.css" />
 		<style type="text/css">
 			html, body {
 				height: 100%;
